--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@
 .Ruserdata
 Questions.nb.html
 Questions.html
+Monday.nb.html
+Monday.html
+Tuesday.nb.html
+Tuesday.html
+Wednesday.nb.html
+Wednesday.html
+Thursday.nb.html
+Thursday.html
+Friday.nb.html
+Friday.html
