--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,15 @@
 .Rhistory
 .RData
 .Ruserdata
-Questions.nb.html
-Questions.html
-Monday.nb.html
-Monday.html
-Tuesday.nb.html
-Tuesday.html
-Wednesday.nb.html
-Wednesday.html
-Thursday.nb.html
-Thursday.html
-Friday.nb.html
-Friday.html
+Old_questions_backup.nb.html
+Old_questions_backup.html
+01_Monday.nb.html
+01_Monday.html
+02_Tuesday.nb.html
+02_Tuesday.html
+03_Wednesday.nb.html
+03_Wednesday.html
+04_Thursday.nb.html
+04_Thursday.html
+05_Friday.nb.html
+05_Friday.html
